bugfix: dt is not visible even if it is under the expanded nodes. css rules are changed.

--- a/css/_list.scss
+++ b/css/_list.scss
@@ -28,7 +28,7 @@ dd, li {
 }
 
 
-.expanded {
+.expanded, .expanded > dl > dt {
     visibility : visible !important;
     &:before, &:after {
         visibility : hidden !important;
